#
# Make sure that these files get included in our distribution

EXTRA_DIST = \
README.txt\
afflib.mak \
config.h \
getopt.c \
getopt.h \
make.bat \
openssl/md5.c \
openssl/md5.h \
openssl/sha.c \
openssl/sha.h \
zlib-1.2.3/adler32.c \
zlib-1.2.3/algorithm.txt \
zlib-1.2.3/ChangeLog \
zlib-1.2.3/compress.c \
zlib-1.2.3/configure \
zlib-1.2.3/crc32.c \
zlib-1.2.3/crc32.h \
zlib-1.2.3/deflate.c \
zlib-1.2.3/deflate.h \
zlib-1.2.3/example-res.rc \
zlib-1.2.3/example-static-res.rc \
zlib-1.2.3/example.c \
zlib-1.2.3/examples/fitblk.c \
zlib-1.2.3/examples/gun.c \
zlib-1.2.3/examples/gzappend.c \
zlib-1.2.3/examples/gzjoin.c \
zlib-1.2.3/examples/gzlog.c \
zlib-1.2.3/examples/gzlog.h \
zlib-1.2.3/examples/README.examples \
zlib-1.2.3/examples/zlib_how.html \
zlib-1.2.3/examples/zpipe.c \
zlib-1.2.3/examples/zran.c \
zlib-1.2.3/FAQ \
zlib-1.2.3/gzio.c \
zlib-1.2.3/INDEX \
zlib-1.2.3/infback.c \
zlib-1.2.3/inffast.c \
zlib-1.2.3/inffast.h \
zlib-1.2.3/inffixed.h \
zlib-1.2.3/inflate.c \
zlib-1.2.3/inflate.h \
zlib-1.2.3/inftrees.c \
zlib-1.2.3/inftrees.h \
zlib-1.2.3/Makefile \
zlib-1.2.3/Makefile.in \
zlib-1.2.3/make_vms.com \
zlib-1.2.3/minigzip-res.rc \
zlib-1.2.3/minigzip-static-res.rc \
zlib-1.2.3/minigzip.c \
zlib-1.2.3/README \
zlib-1.2.3/trees.c \
zlib-1.2.3/trees.h \
zlib-1.2.3/uncompr.c \
zlib-1.2.3/zconf.h \
zlib-1.2.3/zconf.in.h \
zlib-1.2.3/zlib-dll-res.rc \
zlib-1.2.3/zlib-dllversion.c \
zlib-1.2.3/zlib-ltversion \
zlib-1.2.3/zlib.3 \
zlib-1.2.3/zlib.h \
zlib-1.2.3/zlib.ico \
zlib-1.2.3/zutil.c \
zlib-1.2.3/zutil.h  \
libewf-20070512/Makefile.am \
libewf-20070512/NEWS \
libewf-20070512/config.sub \
libewf-20070512/COPYING \
libewf-20070512/install-sh \
libewf-20070512/ChangeLog \
libewf-20070512/missing \
libewf-20070512/config.guess \
libewf-20070512/ewftools/Makefile.am \
libewf-20070512/ewftools/ewfgetopt.h \
libewf-20070512/ewftools/ewfsignal.h \
libewf-20070512/ewftools/ewfacquire.c \
libewf-20070512/ewftools/ewfcommon.c \
libewf-20070512/ewftools/ewfsignal.c \
libewf-20070512/ewftools/ewfalter.c \
libewf-20070512/ewftools/ewfexport.c \
libewf-20070512/ewftools/ewfsha1.h \
libewf-20070512/ewftools/ewfglob.h \
libewf-20070512/ewftools/ewfgetopt.c \
libewf-20070512/ewftools/ewfacquirestream.c \
libewf-20070512/ewftools/ewfinfo.c \
libewf-20070512/ewftools/ewfglob.c \
libewf-20070512/ewftools/ewfverify.c \
libewf-20070512/ewftools/ewfcommon.h \
libewf-20070512/AUTHORS \
libewf-20070512/libewf.spec \
libewf-20070512/include/libewf.h \
libewf-20070512/include/libewf.h.in \
libewf-20070512/include/libewf/libewf_types.h \
libewf-20070512/include/libewf/libewf_definitions.h.in \
libewf-20070512/include/libewf/libewf_handle.h \
libewf-20070512/include/libewf/libewf_extern.h \
libewf-20070512/include/libewf/libewf_types.h.in \
libewf-20070512/include/libewf/libewf_definitions.h \
libewf-20070512/manuals/Makefile.am \
libewf-20070512/manuals/ewfacquire.1 \
libewf-20070512/manuals/libewf.3 \
libewf-20070512/manuals/ewfverify.1 \
libewf-20070512/manuals/ewfinfo.1 \
libewf-20070512/manuals/ewfexport.1 \
libewf-20070512/manuals/ewfacquirestream.1 \
libewf-20070512/INSTALL \
libewf-20070512/TESTS \
libewf-20070512/depcomp \
libewf-20070512/configure.ac \
libewf-20070512/ltmain.sh \
libewf-20070512/aclocal.m4 \
libewf-20070512/configure \
libewf-20070512/compile \
libewf-20070512/libewf/libewf_offset_table.h \
libewf-20070512/libewf/ewf_section.h \
libewf-20070512/libewf/ewf_char.h \
libewf-20070512/libewf/ewf_table.h \
libewf-20070512/libewf/ewf_volume_smart.h \
libewf-20070512/libewf/libewf_section.c \
libewf-20070512/libewf/Makefile.am \
libewf-20070512/libewf/libewf_offset_table.c \
libewf-20070512/libewf/ewf_ltree.h \
libewf-20070512/libewf/ewf_header.h \
libewf-20070512/libewf/libewf_common.c \
libewf-20070512/libewf/ewf_ltree.c \
libewf-20070512/libewf/ewf_crc.c \
libewf-20070512/libewf/ewf_data.c \
libewf-20070512/libewf/libewf_endian.c \
libewf-20070512/libewf/ewf_compress.c \
libewf-20070512/libewf/libewf_section_list.c \
libewf-20070512/libewf/ewf_table.c \
libewf-20070512/libewf/libewf_chunk_cache.c \
libewf-20070512/libewf/ewf_volume.h \
libewf-20070512/libewf/libewf_read.h \
libewf-20070512/libewf/ewf_error2.c \
libewf-20070512/libewf/libewf_error_sector.h \
libewf-20070512/libewf/libewf_header_values.c \
libewf-20070512/libewf/libewf_file.c \
libewf-20070512/libewf/libewf_endian.h \
libewf-20070512/libewf/libewf_includes.h \
libewf-20070512/libewf/libewf_write.c \
libewf-20070512/libewf/libewf_chunk_cache.h \
libewf-20070512/libewf/libewf_char.h \
libewf-20070512/libewf/ewf_file_header.c \
libewf-20070512/libewf/ewf_volume_smart.c \
libewf-20070512/libewf/ewf_error2.h \
libewf-20070512/libewf/ewf_file_header.h \
libewf-20070512/libewf/libewf_config.h.in \
libewf-20070512/libewf/libewf_debug.c \
libewf-20070512/libewf/ewf_data.h \
libewf-20070512/libewf/ewf_digest_hash.h \
libewf-20070512/libewf/libewf_section.h \
libewf-20070512/libewf/libewf_common.h \
libewf-20070512/libewf/ewf_chunk.h \
libewf-20070512/libewf/libewf_internal_handle.c \
libewf-20070512/libewf/libewf_segment_table.h \
libewf-20070512/libewf/ewf_section.c \
libewf-20070512/libewf/ewf_compress.h \
libewf-20070512/libewf/ewf_hash.c \
libewf-20070512/libewf/libewf_internal_handle.h \
libewf-20070512/libewf/libewf_md5.h \
libewf-20070512/libewf/libewf_config_windows.h \
libewf-20070512/libewf/ewf_definitions.h \
libewf-20070512/libewf/libewf_debug.h \
libewf-20070512/libewf/libewf_hash_values.h \
libewf-20070512/libewf/ewf_header2.h \
libewf-20070512/libewf/ewf_string.c \
libewf-20070512/libewf/libewf_digest_context.c \
libewf-20070512/libewf/libewf_file.h \
libewf-20070512/libewf/libewf_string.c \
libewf-20070512/libewf/ewf_string.h \
libewf-20070512/libewf/libewf_notify.h \
libewf-20070512/libewf/libewf_section_list.h \
libewf-20070512/libewf/ewf_volume.c \
libewf-20070512/libewf/libewf_notify.c \
libewf-20070512/libewf/libewf_digest_context.h \
libewf-20070512/libewf/libewf.c \
libewf-20070512/libewf/libewf_string.h \
libewf-20070512/libewf/ewf_crc.h \
libewf-20070512/libewf/ewf_hash.h \
libewf-20070512/libewf/libewf_config.h \
libewf-20070512/libewf/libewf_segment_table.c \
libewf-20070512/libewf/libewf_read.c \
libewf-20070512/libewf/libewf_header_values.h \
libewf-20070512/libewf/libewf_hash_values.c \
libewf-20070512/libewf/libewf_write.h \
libewf-20070512/libewf.spec.in \
libewf-20070512/README \
libewf-20070512/libewf.pc.in


windist: afflib.lib 
	cp ../lib/afflib.h .
	zip afflib.zip *.exe afflib.lib afflib.h
	rm afflib.h
	scp afflib.zip afflib@www.afflib.org:afflib.org/downloads/afflib-win32-$(VERSION).zip
	ssh afflib@www.afflib.org 'echo $(VERSION) > afflib.org/downloads/windows_version.txt'

afflib.lib:
	echo To make afflib.lib, fire up Windows and type make.bat 

